--- a/FYProject1/Views/Shared/_MainLayout.cshtml
+++ b/FYProject1/Views/Shared/_MainLayout.cshtml
@@ -255,6 +255,7 @@
                     "Price": $(this).data("pprice"),
                     "Quantity": $(this).data("pqty"),
                     "ImageURL": $(this).data("purl"),
+                    "Sale": $(this).data("psale")
                 }
                 $(this).parents("#proditem").fadeOut(100);
                 $.ajax(
