--- a/FYProject1/Views/Shared/_ProductsSummaryView.cshtml
+++ b/FYProject1/Views/Shared/_ProductsSummaryView.cshtml
@@ -40,7 +40,7 @@
                         }
                     </div>
                     <div class="col-lg-12">
-                        <button class="btn btn-default btn-block addcartbtn" type="button" data-pid="@p.Id" data-pname="@p.Title" data-pprice="@p.Price" data-purl="@p.image_Url" data-pqty="1"><span class="glyphicon glyphicon-shopping-cart"></span></button>
+                        <button class="btn btn-default btn-block addcartbtn" type="button" data-pid="@p.Id" data-pname="@p.Title" data-pprice="@p.Price" data-psale="@p.Sale" data-purl="@p.image_Url" data-pqty="1"><span class="glyphicon glyphicon-shopping-cart"></span></button>
                     </div>
                 </div>
             </div>
