--- a/FYProject1/Views/Cart/ViewCart.cshtml
+++ b/FYProject1/Views/Cart/ViewCart.cshtml
@@ -66,7 +66,8 @@
     </table>
     <div class="col-lg-4 pull-right">
         <h3><strong>TOTAL: </strong> <u>Rs. @($"{ViewBag.total:N0}")</u></h3>
-        <button class="btn btn-default btn-block">CHECKOUT</button>
+        <a class="btn btn-default btn-block" href="@Url.Action("Checkout")">CHECKOUT</a>
+        @*<button class="btn btn-default btn-block">CHECKOUT</button>*@
     </div>
 
 </div>
