--- a/FYProject1/Views/User/UserGuestUpdate.cshtml
+++ b/FYProject1/Views/User/UserGuestUpdate.cshtml
@@ -14,7 +14,7 @@
 <h2 class="list-group-item-heading text-center notextselect">User Update: <b> @user.FullName </b></h2>
 
 <div class="col-lg-8">
-    @if (msg != null && msg == "Update Success")
+    @if (msg != null && msg == "Update Successfully")
     {
         <div class="alert alert-success alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
