Update: New Responive Order Email.

--- a/FYProject1/Views/Shared/_AdminLayout.cshtml
+++ b/FYProject1/Views/Shared/_AdminLayout.cshtml
@@ -141,7 +141,7 @@
 
     <!-- Bottom Bar / Footer -->
 
-    <footer class="navbar navbar-default navbar-fixed-bottom" style="margin:0px">
+    <footer class="navbar navbar-default" style="margin:0px">
         <div class="container">
 
             <p class="navbar-text pull-left notextselect" style="color:antiquewhite; cursor:default">Copyrights &copy; Arslan Ameer | All Rights Reserved</p>
