Update: Improve Responsivness
Added bootsratp classes for improved and better responsive experience

--- a/FYProject1/Views/Shared/_MainLayout.cshtml
+++ b/FYProject1/Views/Shared/_MainLayout.cshtml
@@ -162,7 +162,7 @@
                     }
                 </div>
 
-                <div class="col-lg-12" style="border:1px solid lightgrey;height:560px"><center>PROMOTIONAL / ADVERTISMENT</center></div>
+                <div class="col-lg-12 hidden-xs" style="border:1px solid lightgrey;height:560px"><center>PROMOTIONAL / ADVERTISMENT</center></div>
             </div>
 
             <!-- RIGHT SECTION -->
