🖼 Add: Favicon to Site

--- a/FYProject1/Views/Home/Index.cshtml
+++ b/FYProject1/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using FYProject1Classes.BannerMgmt
 @using FYProject1.Models
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "LK' eCamera Shop";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
     List<MainBanner> banners = ViewBag.banners;
     List<CameraSummaryModel> cameras = ViewBag.indexProducts;
