--- a/FYProject1/Views/Location/LocationManagment.cshtml
+++ b/FYProject1/Views/Location/LocationManagment.cshtml
@@ -11,32 +11,35 @@
     <h4>List Of Countries</h4>
     <p>@Html.ActionLink("Add New Country", "AddCountry")</p>
 
-    <table class="table table-condensed table-striped table-bordered table-hover">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CountryCode)
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
+    <table id="datatable" class="table table-condensed table-striped table-bordered table-hover">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td class="text-center">
-                    @Html.DisplayFor(modelItem => item.CountryCode)
-                </td>
-                <td class="text-center">
-                    @Html.ActionLink(" List Of Cities", "CityList", new { id = item.Id }) |
-                    @Html.ActionLink("Delete Country", "DeleteCountry", new { id = item.Id })
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CountryCode)
+                </th>
+                <th></th>
             </tr>
-        }
-
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td class="text-center">
+                        @Html.DisplayFor(modelItem => item.CountryCode)
+                    </td>
+                    <td class="text-center">
+                        @Html.ActionLink(" List Of Cities", "CityList", new { id = item.Id }) |
+                        @Html.ActionLink("Delete Country", "DeleteCountry", new { id = item.Id })
+                    </td>
+                </tr>
+            }
+        </tbody>
     </table>
 </div>
+
