🛠 Update: 👌 Super Deal Ribbon Responsivness

--- a/FYProject1/Views/Home/Index.cshtml
+++ b/FYProject1/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 
     <!-- Image/Banner Slider -->
 
-    <div id="slider" class="carousel slide hidden-xs" data-ride="carousel">
+    <div id="slider" class="carousel slide" data-ride="carousel">
 
         <!-- Intializers & Indicators -->
 
@@ -76,7 +76,7 @@
     <div class="row">
         <!--style="margin-top:61px">-->
 
-        <div class="col-lg-12">
+        <div class="col-lg-12 col-md-8">
             <a href="@Url.Action("SuperDeal","Product")" class="text-capitalize text-center" style="text-decoration:none">
                 <div class="adbarmainpage">
                     Super DEAL <i class="glyphicon glyphicon-gift"></i> CLICK NOW !
